MB-28850: Fix regression in append stat tracking

- Append operations are supposed to be tracked under cmd_set.
- A refactoring of the append state machine caused this stat to
  not be incremented after successful appends.
- This commit ensures that the stat is appending at the correct
  stage of the append operation state machine.
- Added unit tests to ensure that any future regression in append
  stat tracking is caught.

Change-Id: I3369479cbf4a34f151c9252d2ccfd68dd82777fd
Reviewed-on: http://review.couchbase.org/91441
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>